RelatorioFinal/códigosInterpreteJava/parser.automaton
State 0:
prog' -> . prog [ # ]
-- On CLASS shift to state 1
-- On prog shift to state 145

State 1:
prog -> CLASS . ID ACHAVE list(var_decl) list(declaracao_metodo) comando_block FCHAVE EOF [ # ]
-- On ID shift to state 2

State 2:
prog -> CLASS ID . ACHAVE list(var_decl) list(declaracao_metodo) comando_block FCHAVE EOF [ # ]
-- On ACHAVE shift to state 3

State 3:
prog -> CLASS ID ACHAVE . list(var_decl) list(declaracao_metodo) comando_block FCHAVE EOF [ # ]
-- On STRING shift to state 4
-- On INT shift to state 5
-- On DOUBLE shift to state 6
-- On BOOLEAN shift to state 7
-- On var_decl shift to state 8
-- On tipo_simples shift to state 9
-- On tipo shift to state 10
-- On list(var_decl) shift to state 17
-- On STATIC reduce production list(var_decl) -> 
-- On PUBLIC reduce production list(var_decl) -> 

State 4:
tipo_simples -> STRING . [ ID ]
-- On ID reduce production tipo_simples -> STRING 

State 5:
tipo_simples -> INT . [ ID ]
-- On ID reduce production tipo_simples -> INT 

State 6:
tipo_simples -> DOUBLE . [ ID ]
-- On ID reduce production tipo_simples -> DOUBLE 

State 7:
tipo_simples -> BOOLEAN . [ ID ]
-- On ID reduce production tipo_simples -> BOOLEAN 

State 8:
list(var_decl) -> var_decl . list(var_decl) [ WHILE STATIC RETURN PUBLIC NOT LITSTRING LITINT LITDOUBLE LITBOOLEAN IF ID FCHAVE ESCREVA APAR ]
-- On STRING shift to state 4
-- On INT shift to state 5
-- On DOUBLE shift to state 6
-- On BOOLEAN shift to state 7
-- On var_decl shift to state 8
-- On tipo_simples shift to state 9
-- On tipo shift to state 10
-- On list(var_decl) shift to state 16
-- On WHILE reduce production list(var_decl) -> 
-- On STATIC reduce production list(var_decl) -> 
-- On RETURN reduce production list(var_decl) -> 
-- On PUBLIC reduce production list(var_decl) -> 
-- On NOT reduce production list(var_decl) -> 
-- On LITSTRING reduce production list(var_decl) -> 
-- On LITINT reduce production list(var_decl) -> 
-- On LITDOUBLE reduce production list(var_decl) -> 
-- On LITBOOLEAN reduce production list(var_decl) -> 
-- On IF reduce production list(var_decl) -> 
-- On ID reduce production list(var_decl) -> 
-- On FCHAVE reduce production list(var_decl) -> 
-- On ESCREVA reduce production list(var_decl) -> 
-- On APAR reduce production list(var_decl) -> 

State 9:
tipo -> tipo_simples . [ ID ]
-- On ID reduce production tipo -> tipo_simples 

State 10:
var_decl -> tipo . separated_nonempty_list(VIRGULA,ID) PONTOEVIRGULA [ WHILE STRING STATIC RETURN PUBLIC NOT LITSTRING LITINT LITDOUBLE LITBOOLEAN INT IF ID FCHAVE ESCREVA DOUBLE BOOLEAN APAR ]
-- On ID shift to state 11
-- On separated_nonempty_list(VIRGULA,ID) shift to state 14

State 11:
separated_nonempty_list(VIRGULA,ID) -> ID . [ PONTOEVIRGULA ]
separated_nonempty_list(VIRGULA,ID) -> ID . VIRGULA separated_nonempty_list(VIRGULA,ID) [ PONTOEVIRGULA ]
-- On VIRGULA shift to state 12
-- On PONTOEVIRGULA reduce production separated_nonempty_list(VIRGULA,ID) -> ID 

State 12:
separated_nonempty_list(VIRGULA,ID) -> ID VIRGULA . separated_nonempty_list(VIRGULA,ID) [ PONTOEVIRGULA ]
-- On ID shift to state 11
-- On separated_nonempty_list(VIRGULA,ID) shift to state 13

State 13:
separated_nonempty_list(VIRGULA,ID) -> ID VIRGULA separated_nonempty_list(VIRGULA,ID) . [ PONTOEVIRGULA ]
-- On PONTOEVIRGULA reduce production separated_nonempty_list(VIRGULA,ID) -> ID VIRGULA separated_nonempty_list(VIRGULA,ID) 

State 14:
var_decl -> tipo separated_nonempty_list(VIRGULA,ID) . PONTOEVIRGULA [ WHILE STRING STATIC RETURN PUBLIC NOT LITSTRING LITINT LITDOUBLE LITBOOLEAN INT IF ID FCHAVE ESCREVA DOUBLE BOOLEAN APAR ]
-- On PONTOEVIRGULA shift to state 15

State 15:
var_decl -> tipo separated_nonempty_list(VIRGULA,ID) PONTOEVIRGULA . [ WHILE STRING STATIC RETURN PUBLIC NOT LITSTRING LITINT LITDOUBLE LITBOOLEAN INT IF ID FCHAVE ESCREVA DOUBLE BOOLEAN APAR ]
-- On WHILE reduce production var_decl -> tipo separated_nonempty_list(VIRGULA,ID) PONTOEVIRGULA 
-- On STRING reduce production var_decl -> tipo separated_nonempty_list(VIRGULA,ID) PONTOEVIRGULA 
-- On STATIC reduce production var_decl -> tipo separated_nonempty_list(VIRGULA,ID) PONTOEVIRGULA 
-- On RETURN reduce production var_decl -> tipo separated_nonempty_list(VIRGULA,ID) PONTOEVIRGULA 
-- On PUBLIC reduce production var_decl -> tipo separated_nonempty_list(VIRGULA,ID) PONTOEVIRGULA 
-- On NOT reduce production var_decl -> tipo separated_nonempty_list(VIRGULA,ID) PONTOEVIRGULA 
-- On LITSTRING reduce production var_decl -> tipo separated_nonempty_list(VIRGULA,ID) PONTOEVIRGULA 
-- On LITINT reduce production var_decl -> tipo separated_nonempty_list(VIRGULA,ID) PONTOEVIRGULA 
-- On LITDOUBLE reduce production var_decl -> tipo separated_nonempty_list(VIRGULA,ID) PONTOEVIRGULA 
-- On LITBOOLEAN reduce production var_decl -> tipo separated_nonempty_list(VIRGULA,ID) PONTOEVIRGULA 
-- On INT reduce production var_decl -> tipo separated_nonempty_list(VIRGULA,ID) PONTOEVIRGULA 
-- On IF reduce production var_decl -> tipo separated_nonempty_list(VIRGULA,ID) PONTOEVIRGULA 
-- On ID reduce production var_decl -> tipo separated_nonempty_list(VIRGULA,ID) PONTOEVIRGULA 
-- On FCHAVE reduce production var_decl -> tipo separated_nonempty_list(VIRGULA,ID) PONTOEVIRGULA 
-- On ESCREVA reduce production var_decl -> tipo separated_nonempty_list(VIRGULA,ID) PONTOEVIRGULA 
-- On DOUBLE reduce production var_decl -> tipo separated_nonempty_list(VIRGULA,ID) PONTOEVIRGULA 
-- On BOOLEAN reduce production var_decl -> tipo separated_nonempty_list(VIRGULA,ID) PONTOEVIRGULA 
-- On APAR reduce production var_decl -> tipo separated_nonempty_list(VIRGULA,ID) PONTOEVIRGULA 

State 16:
list(var_decl) -> var_decl list(var_decl) . [ WHILE STATIC RETURN PUBLIC NOT LITSTRING LITINT LITDOUBLE LITBOOLEAN IF ID FCHAVE ESCREVA APAR ]
-- On WHILE reduce production list(var_decl) -> var_decl list(var_decl) 
-- On STATIC reduce production list(var_decl) -> var_decl list(var_decl) 
-- On RETURN reduce production list(var_decl) -> var_decl list(var_decl) 
-- On PUBLIC reduce production list(var_decl) -> var_decl list(var_decl) 
-- On NOT reduce production list(var_decl) -> var_decl list(var_decl) 
-- On LITSTRING reduce production list(var_decl) -> var_decl list(var_decl) 
-- On LITINT reduce production list(var_decl) -> var_decl list(var_decl) 
-- On LITDOUBLE reduce production list(var_decl) -> var_decl list(var_decl) 
-- On LITBOOLEAN reduce production list(var_decl) -> var_decl list(var_decl) 
-- On IF reduce production list(var_decl) -> var_decl list(var_decl) 
-- On ID reduce production list(var_decl) -> var_decl list(var_decl) 
-- On FCHAVE reduce production list(var_decl) -> var_decl list(var_decl) 
-- On ESCREVA reduce production list(var_decl) -> var_decl list(var_decl) 
-- On APAR reduce production list(var_decl) -> var_decl list(var_decl) 

State 17:
prog -> CLASS ID ACHAVE list(var_decl) . list(declaracao_metodo) comando_block FCHAVE EOF [ # ]
-- On STATIC shift to state 18
-- On list(declaracao_metodo) shift to state 126
-- On declaracao_metodo shift to state 143
-- On PUBLIC reduce production list(declaracao_metodo) -> 

State 18:
declaracao_metodo -> STATIC . tipo ID APAR loption(separated_nonempty_list(VIRGULA,parametro)) FPAR ACHAVE list(var_decl) list(comando) FCHAVE [ STATIC PUBLIC ]
-- On STRING shift to state 4
-- On INT shift to state 5
-- On DOUBLE shift to state 6
-- On BOOLEAN shift to state 7
-- On tipo_simples shift to state 9
-- On tipo shift to state 19

State 19:
declaracao_metodo -> STATIC tipo . ID APAR loption(separated_nonempty_list(VIRGULA,parametro)) FPAR ACHAVE list(var_decl) list(comando) FCHAVE [ STATIC PUBLIC ]
-- On ID shift to state 20

State 20:
declaracao_metodo -> STATIC tipo ID . APAR loption(separated_nonempty_list(VIRGULA,parametro)) FPAR ACHAVE list(var_decl) list(comando) FCHAVE [ STATIC PUBLIC ]
-- On APAR shift to state 21

State 21:
declaracao_metodo -> STATIC tipo ID APAR . loption(separated_nonempty_list(VIRGULA,parametro)) FPAR ACHAVE list(var_decl) list(comando) FCHAVE [ STATIC PUBLIC ]
-- On STRING shift to state 4
-- On INT shift to state 5
-- On DOUBLE shift to state 6
-- On BOOLEAN shift to state 7
-- On tipo_simples shift to state 9
-- On tipo shift to state 22
-- On separated_nonempty_list(VIRGULA,parametro) shift to state 24
-- On parametro shift to state 25
-- On loption(separated_nonempty_list(VIRGULA,parametro)) shift to state 28
-- On FPAR reduce production loption(separated_nonempty_list(VIRGULA,parametro)) -> 

State 22:
parametro -> tipo . ID [ VIRGULA FPAR ]
-- On ID shift to state 23

State 23:
parametro -> tipo ID . [ VIRGULA FPAR ]
-- On VIRGULA reduce production parametro -> tipo ID 
-- On FPAR reduce production parametro -> tipo ID 

State 24:
loption(separated_nonempty_list(VIRGULA,parametro)) -> separated_nonempty_list(VIRGULA,parametro) . [ FPAR ]
-- On FPAR reduce production loption(separated_nonempty_list(VIRGULA,parametro)) -> separated_nonempty_list(VIRGULA,parametro) 

State 25:
separated_nonempty_list(VIRGULA,parametro) -> parametro . [ FPAR ]
separated_nonempty_list(VIRGULA,parametro) -> parametro . VIRGULA separated_nonempty_list(VIRGULA,parametro) [ FPAR ]
-- On VIRGULA shift to state 26
-- On FPAR reduce production separated_nonempty_list(VIRGULA,parametro) -> parametro 

State 26:
separated_nonempty_list(VIRGULA,parametro) -> parametro VIRGULA . separated_nonempty_list(VIRGULA,parametro) [ FPAR ]
-- On STRING shift to state 4
-- On INT shift to state 5
-- On DOUBLE shift to state 6
-- On BOOLEAN shift to state 7
-- On tipo_simples shift to state 9
-- On tipo shift to state 22
-- On separated_nonempty_list(VIRGULA,parametro) shift to state 27
-- On parametro shift to state 25

State 27:
separated_nonempty_list(VIRGULA,parametro) -> parametro VIRGULA separated_nonempty_list(VIRGULA,parametro) . [ FPAR ]
-- On FPAR reduce production separated_nonempty_list(VIRGULA,parametro) -> parametro VIRGULA separated_nonempty_list(VIRGULA,parametro) 

State 28:
declaracao_metodo -> STATIC tipo ID APAR loption(separated_nonempty_list(VIRGULA,parametro)) . FPAR ACHAVE list(var_decl) list(comando) FCHAVE [ STATIC PUBLIC ]
-- On FPAR shift to state 29

State 29:
declaracao_metodo -> STATIC tipo ID APAR loption(separated_nonempty_list(VIRGULA,parametro)) FPAR . ACHAVE list(var_decl) list(comando) FCHAVE [ STATIC PUBLIC ]
-- On ACHAVE shift to state 30

State 30:
declaracao_metodo -> STATIC tipo ID APAR loption(separated_nonempty_list(VIRGULA,parametro)) FPAR ACHAVE . list(var_decl) list(comando) FCHAVE [ STATIC PUBLIC ]
-- On STRING shift to state 4
-- On INT shift to state 5
-- On DOUBLE shift to state 6
-- On BOOLEAN shift to state 7
-- On var_decl shift to state 8
-- On tipo_simples shift to state 9
-- On tipo shift to state 10
-- On list(var_decl) shift to state 31
-- On WHILE reduce production list(var_decl) -> 
-- On RETURN reduce production list(var_decl) -> 
-- On NOT reduce production list(var_decl) -> 
-- On LITSTRING reduce production list(var_decl) -> 
-- On LITINT reduce production list(var_decl) -> 
-- On LITDOUBLE reduce production list(var_decl) -> 
-- On LITBOOLEAN reduce production list(var_decl) -> 
-- On IF reduce production list(var_decl) -> 
-- On ID reduce production list(var_decl) -> 
-- On FCHAVE reduce production list(var_decl) -> 
-- On ESCREVA reduce production list(var_decl) -> 
-- On APAR reduce production list(var_decl) -> 

State 31:
declaracao_metodo -> STATIC tipo ID APAR loption(separated_nonempty_list(VIRGULA,parametro)) FPAR ACHAVE list(var_decl) . list(comando) FCHAVE [ STATIC PUBLIC ]
-- On WHILE shift to state 32
-- On RETURN shift to state 80
-- On NOT shift to state 34
-- On LITSTRING shift to state 36
-- On LITINT shift to state 37
-- On LITDOUBLE shift to state 38
-- On LITBOOLEAN shift to state 39
-- On IF shift to state 84
-- On ID shift to state 40
-- On ESCREVA shift to state 89
-- On APAR shift to state 42
-- On variavel shift to state 43
-- On separated_nonempty_list(VIRGULA,expressao) shift to state 94
-- On list(comando) shift to state 124
-- On expressao shift to state 105
-- On comando_se shift to state 109
-- On comando_retorno shift to state 110
-- On comando_leia shift to state 111
-- On comando_escreva shift to state 112
-- On comando_enquanto shift to state 113
-- On comando_chamada shift to state 114
-- On comando_atribuicao shift to state 115
-- On comando shift to state 116
-- On chamada shift to state 118
-- On FCHAVE reduce production list(comando) -> 

State 32:
comando_enquanto -> WHILE . APAR expressao FPAR ACHAVE list(comando) FCHAVE [ WHILE RETURN NOT LITSTRING LITINT LITDOUBLE LITBOOLEAN IF ID FCHAVE ESCREVA APAR ]
-- On APAR shift to state 33

State 33:
comando_enquanto -> WHILE APAR . expressao FPAR ACHAVE list(comando) FCHAVE [ WHILE RETURN NOT LITSTRING LITINT LITDOUBLE LITBOOLEAN IF ID FCHAVE ESCREVA APAR ]
-- On NOT shift to state 34
-- On LITSTRING shift to state 36
-- On LITINT shift to state 37
-- On LITDOUBLE shift to state 38
-- On LITBOOLEAN shift to state 39
-- On ID shift to state 40
-- On APAR shift to state 42
-- On variavel shift to state 43
-- On expressao shift to state 77
-- On chamada shift to state 49

State 34:
expressao -> NOT . LITBOOLEAN [ VIRGULA SUB SOMA PONTOEVIRGULA OU MULT MENORIGUAL MENOR MAIORIGUAL MAIOR LEIA IGUAL FPAR E DIVISAO DIFERENTE ATRIB ]
-- On LITBOOLEAN shift to state 35

State 35:
expressao -> NOT LITBOOLEAN . [ VIRGULA SUB SOMA PONTOEVIRGULA OU MULT MENORIGUAL MENOR MAIORIGUAL MAIOR LEIA IGUAL FPAR E DIVISAO DIFERENTE ATRIB ]
-- On VIRGULA reduce production expressao -> NOT LITBOOLEAN 
-- On SUB reduce production expressao -> NOT LITBOOLEAN 
-- On SOMA reduce production expressao -> NOT LITBOOLEAN 
-- On PONTOEVIRGULA reduce production expressao -> NOT LITBOOLEAN 
-- On OU reduce production expressao -> NOT LITBOOLEAN 
-- On MULT reduce production expressao -> NOT LITBOOLEAN 
-- On MENORIGUAL reduce production expressao -> NOT LITBOOLEAN 
-- On MENOR reduce production expressao -> NOT LITBOOLEAN 
-- On MAIORIGUAL reduce production expressao -> NOT LITBOOLEAN 
-- On MAIOR reduce production expressao -> NOT LITBOOLEAN 
-- On LEIA reduce production expressao -> NOT LITBOOLEAN 
-- On IGUAL reduce production expressao -> NOT LITBOOLEAN 
-- On FPAR reduce production expressao -> NOT LITBOOLEAN 
-- On E reduce production expressao -> NOT LITBOOLEAN 
-- On DIVISAO reduce production expressao -> NOT LITBOOLEAN 
-- On DIFERENTE reduce production expressao -> NOT LITBOOLEAN 
-- On ATRIB reduce production expressao -> NOT LITBOOLEAN 

State 36:
expressao -> LITSTRING . [ VIRGULA SUB SOMA PONTOEVIRGULA OU MULT MENORIGUAL MENOR MAIORIGUAL MAIOR LEIA IGUAL FPAR E DIVISAO DIFERENTE ATRIB ]
-- On VIRGULA reduce production expressao -> LITSTRING 
-- On SUB reduce production expressao -> LITSTRING 
-- On SOMA reduce production expressao -> LITSTRING 
-- On PONTOEVIRGULA reduce production expressao -> LITSTRING 
-- On OU reduce production expressao -> LITSTRING 
-- On MULT reduce production expressao -> LITSTRING 
-- On MENORIGUAL reduce production expressao -> LITSTRING 
-- On MENOR reduce production expressao -> LITSTRING 
-- On MAIORIGUAL reduce production expressao -> LITSTRING 
-- On MAIOR reduce production expressao -> LITSTRING 
-- On LEIA reduce production expressao -> LITSTRING 
-- On IGUAL reduce production expressao -> LITSTRING 
-- On FPAR reduce production expressao -> LITSTRING 
-- On E reduce production expressao -> LITSTRING 
-- On DIVISAO reduce production expressao -> LITSTRING 
-- On DIFERENTE reduce production expressao -> LITSTRING 
-- On ATRIB reduce production expressao -> LITSTRING 

State 37:
expressao -> LITINT . [ VIRGULA SUB SOMA PONTOEVIRGULA OU MULT MENORIGUAL MENOR MAIORIGUAL MAIOR LEIA IGUAL FPAR E DIVISAO DIFERENTE ATRIB ]
-- On VIRGULA reduce production expressao -> LITINT 
-- On SUB reduce production expressao -> LITINT 
-- On SOMA reduce production expressao -> LITINT 
-- On PONTOEVIRGULA reduce production expressao -> LITINT 
-- On OU reduce production expressao -> LITINT 
-- On MULT reduce production expressao -> LITINT 
-- On MENORIGUAL reduce production expressao -> LITINT 
-- On MENOR reduce production expressao -> LITINT 
-- On MAIORIGUAL reduce production expressao -> LITINT 
-- On MAIOR reduce production expressao -> LITINT 
-- On LEIA reduce production expressao -> LITINT 
-- On IGUAL reduce production expressao -> LITINT 
-- On FPAR reduce production expressao -> LITINT 
-- On E reduce production expressao -> LITINT 
-- On DIVISAO reduce production expressao -> LITINT 
-- On DIFERENTE reduce production expressao -> LITINT 
-- On ATRIB reduce production expressao -> LITINT 

State 38:
expressao -> LITDOUBLE . [ VIRGULA SUB SOMA PONTOEVIRGULA OU MULT MENORIGUAL MENOR MAIORIGUAL MAIOR LEIA IGUAL FPAR E DIVISAO DIFERENTE ATRIB ]
-- On VIRGULA reduce production expressao -> LITDOUBLE 
-- On SUB reduce production expressao -> LITDOUBLE 
-- On SOMA reduce production expressao -> LITDOUBLE 
-- On PONTOEVIRGULA reduce production expressao -> LITDOUBLE 
-- On OU reduce production expressao -> LITDOUBLE 
-- On MULT reduce production expressao -> LITDOUBLE 
-- On MENORIGUAL reduce production expressao -> LITDOUBLE 
-- On MENOR reduce production expressao -> LITDOUBLE 
-- On MAIORIGUAL reduce production expressao -> LITDOUBLE 
-- On MAIOR reduce production expressao -> LITDOUBLE 
-- On LEIA reduce production expressao -> LITDOUBLE 
-- On IGUAL reduce production expressao -> LITDOUBLE 
-- On FPAR reduce production expressao -> LITDOUBLE 
-- On E reduce production expressao -> LITDOUBLE 
-- On DIVISAO reduce production expressao -> LITDOUBLE 
-- On DIFERENTE reduce production expressao -> LITDOUBLE 
-- On ATRIB reduce production expressao -> LITDOUBLE 

State 39:
expressao -> LITBOOLEAN . [ VIRGULA SUB SOMA PONTOEVIRGULA OU MULT MENORIGUAL MENOR MAIORIGUAL MAIOR LEIA IGUAL FPAR E DIVISAO DIFERENTE ATRIB ]
-- On VIRGULA reduce production expressao -> LITBOOLEAN 
-- On SUB reduce production expressao -> LITBOOLEAN 
-- On SOMA reduce production expressao -> LITBOOLEAN 
-- On PONTOEVIRGULA reduce production expressao -> LITBOOLEAN 
-- On OU reduce production expressao -> LITBOOLEAN 
-- On MULT reduce production expressao -> LITBOOLEAN 
-- On MENORIGUAL reduce production expressao -> LITBOOLEAN 
-- On MENOR reduce production expressao -> LITBOOLEAN 
-- On MAIORIGUAL reduce production expressao -> LITBOOLEAN 
-- On MAIOR reduce production expressao -> LITBOOLEAN 
-- On LEIA reduce production expressao -> LITBOOLEAN 
-- On IGUAL reduce production expressao -> LITBOOLEAN 
-- On FPAR reduce production expressao -> LITBOOLEAN 
-- On E reduce production expressao -> LITBOOLEAN 
-- On DIVISAO reduce production expressao -> LITBOOLEAN 
-- On DIFERENTE reduce production expressao -> LITBOOLEAN 
-- On ATRIB reduce production expressao -> LITBOOLEAN 

State 40:
chamada -> ID . APAR loption(separated_nonempty_list(VIRGULA,expressao)) FPAR [ VIRGULA SUB SOMA PONTOEVIRGULA OU MULT MENORIGUAL MENOR MAIORIGUAL MAIOR LEIA IGUAL FPAR E DIVISAO DIFERENTE ATRIB ]
variavel -> ID . [ VIRGULA SUB SOMA PONTOEVIRGULA OU MULT MENORIGUAL MENOR MAIORIGUAL MAIOR LEIA IGUAL FPAR E DIVISAO DIFERENTE ATRIB ]
-- On APAR shift to state 41
-- On VIRGULA reduce production variavel -> ID 
-- On SUB reduce production variavel -> ID 
-- On SOMA reduce production variavel -> ID 
-- On PONTOEVIRGULA reduce production variavel -> ID 
-- On OU reduce production variavel -> ID 
-- On MULT reduce production variavel -> ID 
-- On MENORIGUAL reduce production variavel -> ID 
-- On MENOR reduce production variavel -> ID 
-- On MAIORIGUAL reduce production variavel -> ID 
-- On MAIOR reduce production variavel -> ID 
-- On LEIA reduce production variavel -> ID 
-- On IGUAL reduce production variavel -> ID 
-- On FPAR reduce production variavel -> ID 
-- On E reduce production variavel -> ID 
-- On DIVISAO reduce production variavel -> ID 
-- On DIFERENTE reduce production variavel -> ID 
-- On ATRIB reduce production variavel -> ID 

State 41:
chamada -> ID APAR . loption(separated_nonempty_list(VIRGULA,expressao)) FPAR [ VIRGULA SUB SOMA PONTOEVIRGULA OU MULT MENORIGUAL MENOR MAIORIGUAL MAIOR LEIA IGUAL FPAR E DIVISAO DIFERENTE ATRIB ]
-- On NOT shift to state 34
-- On LITSTRING shift to state 36
-- On LITINT shift to state 37
-- On LITDOUBLE shift to state 38
-- On LITBOOLEAN shift to state 39
-- On ID shift to state 40
-- On APAR shift to state 42
-- On variavel shift to state 43
-- On separated_nonempty_list(VIRGULA,expressao) shift to state 71
-- On loption(separated_nonempty_list(VIRGULA,expressao)) shift to state 72
-- On expressao shift to state 74
-- On chamada shift to state 49
-- On FPAR reduce production loption(separated_nonempty_list(VIRGULA,expressao)) -> 

State 42:
expressao -> APAR . expressao FPAR [ VIRGULA SUB SOMA PONTOEVIRGULA OU MULT MENORIGUAL MENOR MAIORIGUAL MAIOR LEIA IGUAL FPAR E DIVISAO DIFERENTE ATRIB ]
-- On NOT shift to state 34
-- On LITSTRING shift to state 36
-- On LITINT shift to state 37
-- On LITDOUBLE shift to state 38
-- On LITBOOLEAN shift to state 39
-- On ID shift to state 40
-- On APAR shift to state 42
-- On variavel shift to state 43
-- On expressao shift to state 44
-- On chamada shift to state 49

State 43:
expressao -> variavel . [ VIRGULA SUB SOMA PONTOEVIRGULA OU MULT MENORIGUAL MENOR MAIORIGUAL MAIOR LEIA IGUAL FPAR E DIVISAO DIFERENTE ATRIB ]
-- On VIRGULA reduce production expressao -> variavel 
-- On SUB reduce production expressao -> variavel 
-- On SOMA reduce production expressao -> variavel 
-- On PONTOEVIRGULA reduce production expressao -> variavel 
-- On OU reduce production expressao -> variavel 
-- On MULT reduce production expressao -> variavel 
-- On MENORIGUAL reduce production expressao -> variavel 
-- On MENOR reduce production expressao -> variavel 
-- On MAIORIGUAL reduce production expressao -> variavel 
-- On MAIOR reduce production expressao -> variavel 
-- On LEIA reduce production expressao -> variavel 
-- On IGUAL reduce production expressao -> variavel 
-- On FPAR reduce production expressao -> variavel 
-- On E reduce production expressao -> variavel 
-- On DIVISAO reduce production expressao -> variavel 
-- On DIFERENTE reduce production expressao -> variavel 
-- On ATRIB reduce production expressao -> variavel 
